# vigir_pgr_camera

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cfg/: PGRCamera.cfg
include/: camera.h  camera_config.h  stereocamera.h
launch/: atlas_sa_cameras.launch  atlas_sa_cameras_calibration.launch  sa_cameras.launch  stereo.launch
params/: left_sa_camera_driver.yaml  right_sa_camera_driver.yaml
src/: camera.cpp  camera_config.cpp  camera_node.cpp  camera_nodelet.cpp  stereo.cpp  stereo_node.cpp
